Fixed Collapsing Toggled Navbar

--- a/assets/sass/educapital.scss
+++ b/assets/sass/educapital.scss
@@ -436,4 +436,12 @@ nav {
         padding-top: 10px;
         padding-bottom: 10px;
     }
+
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
 }
